--- a/src/pages/libretas.html
+++ b/src/pages/libretas.html
@@ -206,7 +206,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="src/assets/img/oficina/libretas y post it/post-it-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/post-it-3.png" class="img-fluid rounded-start p-3"
                             alt="Truskavet" />
                     </div>
                     <div class="col-md-8">
